--- a/Literatur.bib
+++ b/Literatur.bib
@@ -206,6 +206,14 @@
   url    = {https://github.com/kubeedge/kubeedge/blob/master/docs/proposals/cri.md},
 }
 
+@Report{nwa,
+  author      = {Zangemeister, Christof},
+  date        = {1976},
+  institution = {TU Berlin},
+  title       = {Nutzwertanalyse in der Systemtechnik},
+  type        = {techreport},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
