--- a/Literatur.bib
+++ b/Literatur.bib
@@ -1,5 +1,3 @@
-% Encoding: UTF-8
-
 @Report{SotE21,
   author      = {Fay Arjomandi and Matt Trifiro and Jacob Smith},
   date        = {2020-08-01},
@@ -212,6 +210,20 @@
   institution = {TU Berlin},
   title       = {Nutzwertanalyse in der Systemtechnik},
   type        = {techreport},
+}
+
+@WWW{ke-releases-gh,
+  author = {Github},
+  date   = {2022-03-27},
+  title  = {KubeEdge Releases Github},
+  url    = {https://github.com/kubeedge/kubeedge/releases},
+}
+
+@WWW{kf-releases-gh,
+  author = {Github},
+  date   = {2022-03-27},
+  title  = {KubeFed Releases Github},
+  url    = {https://github.com/kubernetes-sigs/kubefed/releases},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
