--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -495,6 +495,34 @@ Another important factor is the support and the community for the respective app
 \subsection{Future proof}
 Another important element when deciding between the two options is how promising each is for the future. Especially, as in our case, when the project is mainly supported and developed by the community. In the following, the background of the projects, the topicality of the software updates as well as the media impact will be examined. The companies that use or support the project also play an important role in this context.
 
+\paragraph{Releases} An important factor are the release cycles and the associated update frequency. An overview of all versions and updates can be found in the "Releases" site of each Github project. Both projects offer new versions on a regular basis, but KubeEde has slightly shorter cycles. Since the beginning of the year (2022), KubeEde has released two versions and KubeEdge has released one \cite{ke-releases-gh}\cite{kf-releases-gh}. The difference is only small at this point, both products shine with topicality.
+
+\paragraph{Github Stats} Other characteristics that can define the future viability are the current stats from Github. The following table compares the two projects.
+
+\begin{table}[ht]
+    \begin{center}
+        \begin{tabular}{|l|l|l|}
+            \hline
+            Github Stat & \textbf{KubeEdge} & \textbf{KubeFed} \\
+            \hline
+            Stars & 4800 & 2100 \\
+            Forks & 1300 & 470 \\
+            Releases & 30 & 32 \\
+            Contributers & 229 & 87 \\
+            Open issues & 147 & 23 \\
+            Open pull-requests & 34 & 8 \\
+            \hline
+        \end{tabular}
+        \caption{Github Stats overview}
+        \label{tab:gh-stats}
+    \end{center}
+\end{table}
+
+It should be noted that the table shown above is only a snapshot. The values may change accordingly. It must also be noted that the higher number of reported problems may also result from more frequent use. Therefore, the correct interpretation is important.
+
+\paragraph{Membership} KubeEdge is listed as a \ac{CNCF} project in the incubation phase. \ac{CNCF} is a central home for the fastest growing projects in the cloud native category. Even \ac{K8s} itself was part of it. In contrast, KubeFed is supported and further developed by the \ac{K8s} oriented \ac{SIG}. It stands out that due to the group membership clear rules concerning the further development have to be observed.
+
+\paragraph{Sponsors} As already mentioned in section "community and support", KubeEdge is officially sponsored by companies. TODO: DESCRIBE MORE
 
 \section{Criteria catalogue}
 \label{sec:cc}
@@ -620,6 +648,7 @@ Clustering node-groups based on latency.
     \acro{VPN}[VPN]{virtual private network}
     \acro{FQDN}[FQDN]{full qualified domain name}
     \acro{CRI}[CRI]{container runtime interface}
+    \acro{SIG}[SIG]{special interessts group}
 \end{acronym}
 
 %
